added localstorage functionality

--- a/scores.html
+++ b/scores.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Current High Scores!</h1>
-    <div class="score-container">
+    
+    <div class="quiz-container">
     <div id="scores"></div>
     </div>
 
-    <div id="results"></div>
-    <script src = "./assets/js/script.js"></script>
+    <script src = "./assets/js/scores.js"></script>
 </body>
 </html>
