--- a/saveScore.html
+++ b/saveScore.html
@@ -12,8 +12,8 @@
     <div class="quiz-container">
         <div id="quiz">
             <div class="input-group">
-                <span class="input-group-text" id="username">Enter your Username</span>
-                <textarea class="form-control" aria-label="With textarea"></textarea>
+                <span class="input-group-text">Enter your Username</span>
+                <textarea class="form-control" aria-label="With textarea" id="username"></textarea>
             </div>
         </div>
         <div>
