completed readme and added image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html">Back to Main</a>
+          <a class="navbar-brand" href="./scores.html">Leader Board</a>
+        </div>
+    </nav>
     <h1>Pokemon Quiz!</h1>
     <div class="quiz-container">
         <div id="quiz">Do you have what it takes to call yourself a master?
