--- a/scores.html
+++ b/scores.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./">Back to Main</a>
+          <a class="navbar-brand" href="">Leader Board</a>
+        </div>
+    </nav>
     <h1>Current High Scores!</h1>
     
     <div class="quiz-container">
